<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
    android:key="SETTINGS"
    android:title="@string/settings_title">
        <Preference
            android:icon="@drawable/ic_baseline_arrow_back_24"
            android:title="@android:string/ok"
            android:key="OK"
            android:singleLineTitle="true"
            app:allowDividerBelow="true"
            />

        <ListPreference
                android:defaultValue="0"
                android:summary="%s"
                android:entries="@array/halide_entries"
                android:entryValues="@array/halide_vals"
                android:key="@string/halide_key"
                android:title="@string/halide_title"
            app:allowDividerAbove="true"
        />
        <SeekBarPreference
            android:defaultValue="@string/default_flames"
            android:key="@string/flames_key"
            android:title="@string/flames_title"
            android:max="5"
            app:showSeekBarValue="true"
            app:min="0"
            />
        <SeekBarPreference
            android:defaultValue="@string/diffusion_default"
            android:max="100"
            app:showSeekBarValue="true"
            app:min="0"
            android:key="@string/diffusion_key"
            android:title="@string/diffusion_title"
            />
        <SeekBarPreference
            android:defaultValue="@string/viscosity_default"
            android:max="100"
            app:showSeekBarValue="true"
            app:min="0"
            android:key="@string/viscosity_key"
            android:title="@string/viscosity_title"
            />
        <SeekBarPreference
            android:defaultValue="@string/source_default"
            android:key="@string/source_key"
            android:title="@string/source_title"
            android:max="100"
            app:showSeekBarValue="true"
            app:min="1"
            />
        <SeekBarPreference
            android:defaultValue="@string/force_default"
            android:key="@string/force_key"
            android:title="@string/force_title"
            android:max="100"
            app:showSeekBarValue="true"
            app:min="1"
            />
        <SeekBarPreference
            android:defaultValue="@string/scale_default"
            android:key="@string/scale_key"
            android:title="@string/scale_title"
            android:max="10"
            app:showSeekBarValue="true"
            app:min="1"
                />
        <SeekBarPreference
            android:defaultValue="@string/default_updatetime"
            android:key="@string/updatetime_key"
            android:title="@string/updatetime_title"
            android:max="100"
            app:showSeekBarValue="true"
            app:min="0"
            />
        <CheckBoxPreference
                android:defaultValue="false"
            android:key="@string/fixedtimestep_key"
            android:title="@string/fixedtimestep_title"
            />


</PreferenceScreen>